fixed code readability

--- a/styles/sass/partials/_buttons.scss
+++ b/styles/sass/partials/_buttons.scss
@@ -19,14 +19,13 @@
 
 .button.post-button {
   @include button(inline-block, none, variables.$white, variables.$slate-blue, 10px 0);
+  border: none;
+  width: 100%;
+  margin-top: 50px;
 }
 
 .button.submit-button {
   @include button(inline-block, none, variables.$black-two, variables.$hawkes-blue, 10px 0);
-}
-
-.button.post-button,
-.button.submit-button {
   border: none;
   width: 100%;
   margin-top: 50px;
